--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li>
                 <div class="details">
                     <h3>PRATINHO REGIONAL</h3>
-                    <p class="description">Vatapá de frango ou creme de galinha, calabreza, arroz, salada e farofa</p>
+                    <p class="description">Vatapá de frango ou creme de galinha, calabreza, arroz,<br> salada e farofa</p>
                 </div>
                 <strong class="price">10,00</strong>
             </li>
