--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li>
                 <div class="details">
                     <h3>SANDUICHE NATURAL</h3>
-                    <p>Patê de Frango, milho, cenoura, alface, tomate, Opcionais: queijo e ovo caipira</p>
+                    <p>Patê de Frango, milho, cenoura, alface, tomate, Opcionais: queijo <br>e ovo caipira</p>
                     
                 </div>
                 <strong class="price">6,00</strong>
@@ -62,7 +62,7 @@
             <li>
                 <div class="details">
                     <h3>TAPIOCA RECHEADA</h3>
-                    <p>Opções: Queijo, presunto, calabresa ou ovo caipira</p>
+                    <p>Opções: Queijo, presunto, <br>calabresa ou ovo caipira</p>
                 </div>
                 <strong class="price">5,00</strong>
             </li>
@@ -78,7 +78,7 @@
             <li>
                 <div class="details">
                     <h3>CUSCUZ RECHEADO</h3>
-                    <p class="description">Opções: Queijo, presunto, calabresa ou ovo caipira</p>
+                    <p class="description">Opções: Queijo, presunto, <br>calabresa ou ovo caipira</p>
                 </div>
                 <strong class="price">5,00</strong>
             </li>
