--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li>
                 <div class="details">
                     <h3>TAPIOCA RECHEADA</h3>
-                    <p>Opções: Queijo, presunto, <br>calabresa ou ovo caipira</p>
+                    <p>Queijo, presunto, <br>calabresa ou ovo caipira</p>
                 </div>
                 <strong class="price">5,00</strong>
             </li>
