--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
 
             <li>
                 <div class="details">
+                    <h3>ÁGUA MINERAL</h3>
+                </div>
+                <strong class="price">3,50</strong>
+            </li>
+
+            <li>
+                <div class="details">
                     <h3>ÁGUA DE COCO</h3>
                 </div>
                 <strong class="price">4,50</strong>
